# tm-density-calculator-v1

./: .gitignore  Dockerfile  Makefile  buildings_area.py  pyproject.toml  residential_area.py  residential_area_v2.ipynb  residential_area_v2.py
app/: main.py  settings.py
proto/: density_calculator_service_pb2.py  density_calculator_service_pb2_grpc.py
tools/: __init__.py  density_calculator.py
